# jobcli_starter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  applications.csv  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
jobcli/: cli.py  db.py
tests/: test_db.py
