[project]
name = "jobcli"
version = "0.1.0"
description = "A simple CLI to track job applications"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","W","N","D","UP"]
ignore = ["D100","D104","D107"]  # relax docstring rules for brevity

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
